--- a/chores-app/package.json
+++ b/chores-app/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
